<resources>
    <string name="app_name">AndroidSeminar</string>
    <string name="github">Github</string>
    <string name="github_id">깃허브 아이디</string>
    <string name="write_id">ID를 입력해주세요</string>
    <string name="pw">비밀번호</string>
    <string name="write_pw">비밀번호를 입력해주세요</string>
    <string name="login">LOGIN</string>
    <string name="question_sign_up">아이디/비밀번호가 없으신가요?</string>
    <string name="register">회원가입</string>
    <string name="name">이름</string>
    <string name="write_name">이름을 입력해주세요</string>
    <string name="sign_up">SIGN UP</string>
    <string name="introduce">시도하고 성장하는 개발자</string>
    <string name="id">아이디</string>
    <string name="more">MORE</string>
    <string name="change_layout">레이아웃 변경</string>
    <string name="following_list">Following List</string>
    <string name="birth">생년월일</string>
    <string name="woman">여성</string>
    <string name="man">남성</string>
    <string name="sex">성별</string>
    <string name="write_phone">전화번호를 입력해주세요</string>
    <string name="phone">전화번호</string>
    <string name="logout">LOGOUT</string>

</resources>